# mclib

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  header_template.txt  source_template.txt
include/base/: config.h  platform.h  ref.h
include/graphic/: graphic.h  image.h  m_node.h  m_node3d.h  m_shader.h  m_sprite2d.h  m_texture.h  node.h  node3d.h  shader.h  sprite2d.h  texture.h
include/graphic/skin3d/: m_controller_skin.h  m_geometry_mesh.h  m_mesh_polylist.h  m_mesh_source.h  m_mesh_vertices.h  m_skin_join.h  m_skin_node.h  m_skin_node_parser.h  m_visual_scene_join.h  m_visual_scene_node.h
include/math/: math.h  matrix3.h  matrix4.h  quaternion.h  types.h  vector2.h  vector3.h  vector4.h
include/mstr/: data.h  lambda.h  list.h  m_double_array.h  m_float_array.h  m_generic_array.h  m_int_array.h  map.h  primitive.h  string.h  xml.h
include/serialize/: serialize.h
include/utils/: file_utils.h
src/: base.c  data.c  image.c  list.c  map.c  math.c  node.c  serialize.c  shader.c  string.c  texture.c  utils.c  utils.m  xml.c
src/graphic/: m_shader.c  m_texture.c
src/graphic/skin3d/: m_controller_skin.c  m_geometry_mesh.c  m_mesh_polylist.c  m_mesh_source.c  m_mesh_vertices.c  m_skin_join.c  m_skin_node.c  m_skin_node_parser.c  m_visual_scene_join.c  m_visual_scene_node.c
src/mstr/: lambda.c  list.c  m_double_array.c  m_float_array.c  m_generic_array.c  m_int_array.c  map.c  primitive.c  string.c  xml.c
src/node/: m_node.c  m_node3d.c  m_sprite2d.c  node.c  node3d.c  sprite2d.c
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gen_code.c  gltest  gltest.c  maketest.sh  sdl_test  sdl_test.c  shader.frag  shader.vert  test  test.c  test_2d.c  test_atomic  test_atomic.c  test_constructor  test_constructor.c  test_lambda.c  xml_test.c
test/ios/mclibtest/mclibtest/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
test/ios/mclibtest/mclibtest.xcodeproj/: project.pbxproj
test/ios/mclibtest/mclibtest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
test/ios/mclibtest/mclibtest.xcodeproj/project.xcworkspace/xcuserdata/manhtran.xcuserdatad/: UserInterfaceState.xcuserstate
test/ios/mclibtest/mclibtest.xcodeproj/xcuserdata/manhtran.xcuserdatad/xcschemes/: mclibtest.xcscheme  xcschememanagement.plist
test/ios/mclibtest/mclibtestTests/: mclibtestTests.m
test/ios/mclibtest/mclibtestUITests/: mclibtestUITests.m
test/res/: cube-3-2.dae  cube-3.dae  cube4.dae  cude-2.dae  cude.dae  double-cube.dae  parentchild.dae  parentchild2.dae  parentchild3.dae  parentchild4.dae  parentchild5.dae  parentchild6.dae  parentchild7.dae  parentchild8.dae  parentchild9.dae  shader.frag  shader_single_color.frag  sphere.dae  test.xml  test1.dae  test2.dae  test3.dae  work1.dae  work2.dae  work3.dae  work4.dae  work4.fbx  work5.dae
test/res/model/: cube.fbx  cube2.mtl  monkey.fbx  plane.mtl
test/res/shaders/: shader_2d.frag  shader_2d.vert  shader_3d.frag  shader_3d.vert  shader_skin_3d.frag  shader_skin_3d.vert
